objects/Release_Communication__c.object
<CustomObject>
    <description>This object tracks the release communication for the Copado App</description>
    <fields>
        <fullName>Email_date__c</fullName>
        <label>Email date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_can_I_get_more_information__c</fullName>
        <label>How can I get more information?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_will_this_change_impact_me__c</fullName>
        <label>How will this change impact me?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Maintenance_Window__c</fullName>
        <inlineHelpText>Type here the maintenance window on a text format (eg. on Sunday 13 at 21:00 UTC (17:00 EDT)).</inlineHelpText>
        <label>Maintenance Window</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Version</label>
        <referenceTo>sfLma__Package_Version__c</referenceTo>
        <relationshipLabel>Release Communications</relationshipLabel>
        <relationshipName>Release_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Release Communications</relationshipLabel>
        <relationshipName>Release_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_action_do_I_need_to_take__c</fullName>
        <label>What action do I need to take?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_is_changing__c</fullName>
        <label>What is changing?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Release Communication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email_date__c</columns>
        <columns>Package_Version__c</columns>
        <columns>What_is_changing__c</columns>
        <columns>How_will_this_change_impact_me__c</columns>
        <columns>What_action_do_I_need_to_take__c</columns>
        <columns>How_can_I_get_more_information__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Release Communication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>